# gki_pr2_symbolic_planning

./: .gitignore  LICENSE
navigation_actions/: CMakeLists.txt  navigation_actions_plugins.xml  package.xml
navigation_actions/include/planner_navigation_actions/: actionExecutorROSNavigation.h  actionExecutorROSNavigationGrounding.h  goalCreatorROSNavigation.h  stateCreatorROSNavigation.h
navigation_actions/src/: actionExecutorROSNavigation.cpp  actionExecutorROSNavigationGrounding.cpp  goalCreatorROSNavigation.cpp  stateCreatorROSNavigation.cpp
object_manipulation_actions/: CMakeLists.txt  manifest.xml  object_manipulation_actions_plugins.xml  package.xml
object_manipulation_actions/include/object_manipulation_actions/: ArmToFront.h  ArmToSide.h  InspectObject.h  InspectTable.h  LiftTorso.h  PickupObject.h  PutdownObject.h  actionExecutorArmToCarry.h  actionExecutorArmToFront.h  actionExecutorArmToInspectObject.h  actionExecutorArmToSide.h  actionExecutorArmToSideInterface.h  actionExecutorDetectExpectedObjects.h  actionExecutorDetectObjects.h  actionExecutorInspectLocation.h  actionExecutorInspectObject.h  actionExecutorInspectTable.h  actionExecutorInspectTableGrounding.h  actionExecutorLiftTorso.h  actionExecutorLiftTorsoGrounding.h  actionExecutorPickupObject.h  actionExecutorPickupObjectGrounding.h  actionExecutorPutdownObject.h  actionExecutorPutdownObjectGrounding.h
object_manipulation_actions/src/: ArmToFront.cpp  ArmToSide.cpp  InspectObject.cpp  InspectTable.cpp  LiftTorso.cpp  PickupObject.cpp  PutdownObject.cpp  actionExecutorArmToCarry.cpp  actionExecutorArmToFront.cpp  actionExecutorArmToInspectObject.cpp  actionExecutorArmToSide.cpp  actionExecutorArmToSideInterface.cpp  actionExecutorArmToSideNOTworking.cpp  actionExecutorDetectExpectedObjects.cpp  actionExecutorDetectObjects.cpp  actionExecutorInspectLocation.cpp  actionExecutorInspectObject.cpp  actionExecutorInspectTable.cpp  actionExecutorInspectTableGrounding.cpp  actionExecutorLiftTorso.cpp  actionExecutorLiftTorsoGrounding.cpp  actionExecutorPickupObject.cpp  actionExecutorPickupObjectGrounding.cpp  actionExecutorPutdownObject.cpp  actionExecutorPutdownObjectGrounding.cpp
planner_modules_pr2/: CMakeLists.txt  package.xml
planner_modules_pr2/action/: Empty.action
planner_modules_pr2/config/: global_costmap_static_params.yaml
planner_modules_pr2/include/planner_modules_pr2/: ManipulationExceptions.h  ManipulationPlanning.h  drive_pose_module.h  inverse_reachability_maps.h  lift_torso_module.h  manipulation_exceptions.h  manipulation_planning.h  module_param_cache.h  module_param_cache.hpp  navigation_modules.h  navstack_module.h  navstack_planning_scene_module.h  pickup_modules.h  putdown_modules.h  robot_near_modules.h  tidyup_planning_scene_updater.h
planner_modules_pr2/src/: ManipulationPlanning.cpp  caching_evaluation.cpp  caching_evaluation.h  drive_pose_module.cpp  inverse_reachability_maps.cpp  lift_torso_module.cpp  lift_torso_module_old.cpp  manipulation_planning.cpp  module_param_cache.cpp  navigation_modules.cpp  navstack_module.cpp  navstack_planning_scene_module.cpp  pickup_modules.cpp  precache_navigation.cpp  putdown_modules.cpp  robot_near_modules.cpp  subsumption_caching.cpp  subsumption_caching.h  test_navigation.cpp  test_near_table.cpp  test_pickup.cpp  tidyup_planning_scene_updater.cpp
symbolic_planning_utils/: CMakeLists.txt  package.xml
symbolic_planning_utils/include/symbolic_planning_utils/: MoveGroupInterface.h  extractPose.h  joint_limits.h  load_tables.h  moveGroupInterface.h  planning_scene_interface.h  planning_scene_monitor.h  (+2 more)
symbolic_planning_utils/scripts/: shift_collision_objects_in_bag.py
symbolic_planning_utils/src/: MoveGroupInterface.cpp  extractPose.cpp  joint_limits.cpp  load_tables.cpp  moveGroupInterface.cpp  planning_scene_interface.cpp  planning_scene_monitor.cpp  planning_scene_monitor_singleton.cpp  planning_scene_service.cpp
symbolic_planning_utils/test/: moveGroupInterfaceTest.cpp  symbolic_planning_utils.launch
tidyup_state_creators/: CMakeLists.txt  manifest.xml  package.xml  tidyup_state_creators_plugins.xml
tidyup_state_creators/include/tidyup_state_creators/: StateAccessException.h  goalCreatorDefineGoal.h  goalCreatorDefineGoalGrounding.h  goalCreatorDefineGoalTidyupExperiment.h  goalCreatorFromPlanningScene.h  goalCreatorInspectObjects.h  goalCreatorLoadTablesAsMeshIntoPlanningScene.h  goalCreatorLoadTablesIntoPlanningScene.h  goalCreatorMoveObjectsToTable.h  goalCreatorMoveObjectsToTableGrounding.h  goalCreatorResetWorld.h  goalCreatorTidyupInitialize.h  goalCreatorTidyupInitializeGrounding.h  robotPoseVisualization.h  stateCreatorArmsAtSide.h  stateCreatorArmsStatus.h  stateCreatorFromPlanningScene.h  stateCreatorFromPlanningSceneTidyupExperiment.h  stateCreatorLiftTorso.h  stateCreatorLiftTorsoGrounding.h  stateCreatorObjectReachable.h  stateCreatorRobotLocationInRoom.h  stateCreatorRobotPose.h  stateCreatorRobotPoseGrounding.h
tidyup_state_creators/src/: StateAccessException.cpp  goalCreatorDefineGoal.cpp  goalCreatorDefineGoalGrounding.cpp  goalCreatorDefineGoalTidyupExperiment.cpp  goalCreatorFromPlanningScene.cpp  goalCreatorInspectObjects.cpp  goalCreatorLoadTablesAsMeshIntoPlanningScene.cpp  goalCreatorLoadTablesIntoPlanningScene.cpp  goalCreatorMoveObjectsToTable.cpp  goalCreatorMoveObjectsToTableGrounding.cpp  goalCreatorResetWorld.cpp  goalCreatorTidyupInitialize.cpp  goalCreatorTidyupInitializeGrounding.cpp  robotPoseVisualization.cpp  stateCreatorArmsAtSide.cpp  stateCreatorArmsStatus.cpp  stateCreatorFromPlanningScene.cpp  stateCreatorFromPlanningSceneTidyupExperiment.cpp  stateCreatorLiftTorso.cpp  stateCreatorLiftTorsoGrounding.cpp  stateCreatorObjectReachable.cpp  stateCreatorRobotLocationInRoom.cpp  stateCreatorRobotPose.cpp  stateCreatorRobotPoseGrounding.cpp
tidyup_state_creators/test/: move_group.launch  simple_test.cpp  stateCreatorFromPlanningScene.cpp  stateCreatorFromPlanningScene.launch  stateCreatorFromPlanningSceneHelperFunctionTest.cpp  stateCreatorFromPlanningSceneTest.cpp
