<package>
  <name>navigation_actions</name>
  <version>0.0.0</version>
  <description>
    This package contains state and action definitions for the
    continual_planning_executive that interface the navigation stack.
  </description>
  <maintainer email="dornhege@informatik.uni-freiburg.de">Christian Dornhege</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/planner_navigation_actions</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cmake_modules</build_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>continual_planning_executive</build_depend>
  <build_depend>tidyup_utils</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>move_base_msgs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>continual_planning_executive</run_depend>
  <run_depend>tidyup_utils</run_depend>

  <export>
      <continual_planning_executive plugin="${prefix}/navigation_actions_plugins.xml" />
  </export>

</package>


