<package>
  <name>object_manipulation_actions</name>
  <version>0.0.0</version>
  <description>object_manipulation_actions contains action executors to interact with small objects on tables.</description>
  <maintainer email="dornhege@informatik.uni-freiburg.de">Christian Dornhege, Andreas Hertle</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/object_manipulation_actions</url>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cmake_modules</build_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>moveit_msgs</build_depend>
  <build_depend>tidyup_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>continual_planning_executive</build_depend>
  <build_depend>tidyup_utils</build_depend>
  <build_depend>tfd_modules</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
#  <build_depend>state_transformer</build_depend>
#  <build_depend>pr2_controller_msgs</build_depend>
  <build_depend>ork_to_planning_scene</build_depend>
  <build_depend>ork_to_planning_scene_msgs</build_depend>
  <build_depend>symbolic_planning_utils</build_depend>
  <build_depend>object_surface_placements</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>tidyup_msgs</run_depend>
  <run_depend>moveit_msgs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>continual_planning_executive</run_depend>
  <run_depend>tidyup_utils</run_depend>
  <run_depend>tfd_modules</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
#  <run_depend>state_transformer</run_depend>
#  <run_depend>pr2_controller_msgs</run_depend>
  <run_depend>ork_to_planning_scene</run_depend>
  <run_depend>ork_to_planning_scene_msgs</run_depend>
  <run_depend>symbolic_planning_utils</run_depend>
  <run_depend>object_surface_placements</run_depend>

  <export>
      <continual_planning_executive plugin="${prefix}/object_manipulation_actions_plugins.xml" />
  </export>

</package>


