<?xml version="1.0"?>
<package>
  <name>planner_modules_pr2</name>
  <version>0.0.0</version>
  <description>The planner_modules_pr2 package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="hertle@informatik.uni-freiburg.de">Andreas Hertle</maintainer>
  <license>BSD</license>

  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/planner_modules_pr2</url> -->


  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>continual_planning_msgs</build_depend>
  <build_depend>moveit_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tfd_modules</build_depend>
  <build_depend>tidyup_msgs</build_depend>
  <build_depend>tidyup_utils</build_depend>
  <build_depend>gki_3dnav_planner</build_depend>
  <build_depend>sbpl</build_depend>
  <run_depend>continual_planning_msgs</run_depend>
  <run_depend>moveit_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tfd_modules</run_depend>
  <run_depend>tidyup_msgs</run_depend>
  <run_depend>tidyup_utils</run_depend>
  <run_depend>gki_3dnav_planner</run_depend>
  <run_depend>sbpl</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <cpp cflags="-I${prefix}/include" lflags="-L${prefix}/lib -Wl,-rpath,${prefix}/lib -lplanner_modules_pr2"/>
  </export>
</package>
